<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation_player</name>
  <version>0.0.0</version>
  <description>
    This package implements an rviz 2 panel to manage a reMap simulation.
  </description>
  <maintainer email="anon@anon.ymous">Anon Ymous</maintainer>

  <license>MIT</license>

  <author email="anon@anon.ymous">Anon Ymous</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rviz_common</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
